refactor: Used formatted